build: indicate usage at build time for public headers
DPDK code often relies on functions that are not standard C,
but are found on all platforms, even if by slightly different names.
Some headers provide macros or inline difinitions for such symbols.
However, when placed in public headers, these symbols are unnecessarily
exposed to DPDK consumers.

Define RTE_BUILD_INTERNAL at build time.
In its presense public headers can provide additional definitions
for internal code, but hide them from external consumers.

Signed-off-by: Dmitry Kozlyuk <dmitry.kozliuk@gmail.com>

--- a/config/meson.build
+++ b/config/meson.build
@@ -287,6 +287,9 @@ dpdk_conf.set('RTE_EAL_VFIO', is_linux)
 # specify -D_GNU_SOURCE unconditionally
 add_project_arguments('-D_GNU_SOURCE', language: 'c')
 
+# specify that sources are building as part of DPDK
+add_project_arguments('-DRTE_BUILD_INTERNAL', language: 'c')
+
 # specify -D__BSD_VISIBLE for FreeBSD
 if is_freebsd
 	add_project_arguments('-D__BSD_VISIBLE', language: 'c')
